kubernetes/apps/vault/vault/manifests/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "vault",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app.kubernetes.io/name: "vault",
      },
    },
    ingress: [{
      fromCIDRSet: [{
        cidr: "192.168.91.0/24",
      }],
      toPorts: [{
        ports: [{
          port: "8200",
        }],
      }],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "external-secrets",
          io.kubernetes.pod.namespace: "external-secrets",
        },
      }],
    }, {
      fromEndpoints: [{}],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "gatus",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8200",
        }],
      }],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "cert-manager",
          io.kubernetes.pod.namespace: "cert-manager",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8200",
        }],
      }],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "prometheus",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8200",
        }],
      }],
    }, {
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "oidc-jwt-fetcher",
        },
        matchExpressions: [{
          key: "io.kubernetes.pod.namespace",
          operator: "Exists",
        }],
      }],
      toPorts: [{
        ports: [{
          port: "8200",
          protocol: "TCP",
        }],
      }],
    }],
    egress: [{
      toEndpoints: [{}],
    }, {
      toEndpoints: [{
        matchLabels: {
          io.kubernetes.pod.namespace: "kube-system",
          k8s-app: "kube-dns",
        },
      }],
      toPorts: [{
        ports: [{
          port: "53",
          protocol: "UDP",
        }],
      }],
    }, {
      toEntities: [
        "kube-apiserver",
      ],
      toPorts: [{
        ports: [{
          port: "6443",
          protocol: "TCP",
        }],
      }],
    }, {
      toCIDRSet: [{
        cidr: "1.178.4.0/24",
      }, {
        cidr: "1.178.5.0/24",
      }, {
        cidr: "1.178.6.0/24",
      }, {
        cidr: "100.24.0.0/13",
      }, {
        cidr: "100.27.238.0/23",
      }, {
        cidr: "100.28.206.0/24",
      }, {
        cidr: "100.28.208.0/23",
      }, {
        cidr: "100.48.0.0/12",
      }, {
        cidr: "104.153.112.0/24",
      }, {
        cidr: "104.153.115.0/24",
      }, {
        cidr: "104.153.116.0/24",
      }, {
        cidr: "104.153.118.0/24",
      }, {
        cidr: "104.255.56.11/32",
      }, {
        cidr: "104.255.56.12/32",
      }, {
        cidr: "104.255.56.15/32",
      }, {
        cidr: "104.255.56.16/32",
      }, {
        cidr: "104.255.56.17/32",
      }, {
        cidr: "104.255.56.18/32",
      }, {
        cidr: "104.255.56.19/32",
      }, {
        cidr: "104.255.56.20/32",
      }, {
        cidr: "104.255.56.23/32",
      }, {
        cidr: "104.255.56.24/32",
      }, {
        cidr: "104.255.56.25/32",
      }, {
        cidr: "104.255.56.26/32",
      }, {
        cidr: "104.255.56.29/32",
      }, {
        cidr: "107.20.0.0/14",
      }, {
        cidr: "13.128.0.0/16",
      }, {
        cidr: "13.130.0.0/16",
      }, {
        cidr: "13.216.0.0/13",
      }, {
        cidr: "13.217.78.0/23",
      }, {
        cidr: "13.217.8.0/23",
      }, {
        cidr: "13.217.80.0/24",
      }, {
        cidr: "13.220.35.0/26",
      }, {
        cidr: "13.220.35.128/25",
      }, {
        cidr: "13.220.36.0/23",
      }, {
        cidr: "13.220.47.0/25",
      }, {
        cidr: "13.248.103.0/24",
      }, {
        cidr: "13.248.108.0/24",
      }, {
        cidr: "13.248.116.0/24",
      }, {
        cidr: "13.248.124.0/24",
      }, {
        cidr: "136.18.128.0/23",
      }, {
        cidr: "136.18.130.0/23",
      }, {
        cidr: "136.18.132.0/23",
      }, {
        cidr: "136.18.136.0/23",
      }, {
        cidr: "136.18.138.0/23",
      }, {
        cidr: "136.18.160.0/23",
      }, {
        cidr: "136.18.254.0/23",
      }, {
        cidr: "136.18.32.0/24",
      }, {
        cidr: "136.18.33.0/24",
      }, {
        cidr: "136.18.4.0/22",
      }, {
        cidr: "136.18.50.0/23",
      }, {
        cidr: "139.56.18.0/23",
      }, {
        cidr: "139.56.20.0/23",
      }, {
        cidr: "139.56.22.0/23",
      }, {
        cidr: "139.56.24.0/23",
      }, {
        cidr: "139.56.26.0/23",
      }, {
        cidr: "139.56.28.0/23",
      }, {
        cidr: "139.56.30.0/23",
      }, {
        cidr: "139.56.34.0/24",
      }, {
        cidr: "142.4.178.0/24",
      }, {
        cidr: "15.177.64.0/23",
      }, {
        cidr: "15.181.112.0/22",
      }, {
        cidr: "15.181.120.0/21",
      }, {
        cidr: "15.181.144.0/20",
      }, {
        cidr: "15.181.160.0/20",
      }, {
        cidr: "15.181.176.0/20",
      }, {
        cidr: "15.181.192.0/19",
      }, {
        cidr: "15.181.224.0/21",
      }, {
        cidr: "15.181.232.0/21",
      }, {
        cidr: "15.181.240.0/24",
      }, {
        cidr: "15.181.241.0/24",
      }, {
        cidr: "15.181.242.0/24",
      }, {
        cidr: "15.181.243.0/24",
      }, {
        cidr: "15.181.244.0/24",
      }, {
        cidr: "15.181.246.0/24",
      }, {
        cidr: "15.181.247.0/24",
      }, {
        cidr: "15.181.249.0/24",
      }, {
        cidr: "15.181.254.0/24",
      }, {
        cidr: "15.181.32.0/21",
      }, {
        cidr: "15.181.40.0/21",
      }, {
        cidr: "15.181.48.0/20",
      }, {
        cidr: "15.181.80.0/20",
      }, {
        cidr: "15.181.96.0/20",
      }, {
        cidr: "15.193.128.0/22",
      }, {
        cidr: "15.193.6.0/24",
      }, {
        cidr: "15.220.120.0/21",
      }, {
        cidr: "15.220.176.0/21",
      }, {
        cidr: "15.220.184.0/21",
      }, {
        cidr: "15.220.196.0/22",
      }, {
        cidr: "15.220.220.0/23",
      }, {
        cidr: "15.220.222.0/23",
      }, {
        cidr: "15.220.233.0/24",
      }, {
        cidr: "15.220.234.0/23",
      }, {
        cidr: "15.220.236.0/22",
      }, {
        cidr: "15.220.248.0/23",
      }, {
        cidr: "15.220.250.0/23",
      }, {
        cidr: "15.221.0.0/24",
      }, {
        cidr: "15.221.146.0/23",
      }, {
        cidr: "15.221.160.0/22",
      }, {
        cidr: "15.221.176.0/20",
      }, {
        cidr: "15.221.24.0/21",
      }, {
        cidr: "15.221.4.0/23",
      }, {
        cidr: "15.230.105.0/24",
      }, {
        cidr: "15.230.108.0/24",
      }, {
        cidr: "15.230.109.0/24",
      }, {
        cidr: "15.230.119.0/31",
      }, {
        cidr: "15.230.130.0/24",
      }, {
        cidr: "15.230.137.0/24",
      }, {
        cidr: "15.230.14.0/24",
      }, {
        cidr: "15.230.142.0/24",
      }, {
        cidr: "15.230.145.0/24",
      }, {
        cidr: "15.230.147.0/24",
      }, {
        cidr: "15.230.148.0/24",
      }, {
        cidr: "15.230.157.0/24",
      }, {
        cidr: "15.230.162.0/24",
      }, {
        cidr: "15.230.168.0/24",
      }, {
        cidr: "15.230.169.0/31",
      }, {
        cidr: "15.230.169.2/32",
      }, {
        cidr: "15.230.169.3/32",
      }, {
        cidr: "15.230.169.4/31",
      }, {
        cidr: "15.230.169.6/31",
      }, {
        cidr: "15.230.18.0/24",
      }, {
        cidr: "15.230.184.0/24",
      }, {
        cidr: "15.230.192.0/24",
      }, {
        cidr: "15.230.193.0/24",
      }, {
        cidr: "15.230.201.0/24",
      }, {
        cidr: "15.230.204.0/25",
      }, {
        cidr: "15.230.205.0/24",
      }, {
        cidr: "15.230.206.0/24",
      }, {
        cidr: "15.230.208.0/24",
      }, {
        cidr: "15.230.214.0/24",
      }, {
        cidr: "15.230.216.0/31",
      }, {
        cidr: "15.230.216.10/32",
      }, {
        cidr: "15.230.216.11/32",
      }, {
        cidr: "15.230.216.12/31",
      }, {
        cidr: "15.230.216.2/31",
      }, {
        cidr: "15.230.216.4/31",
      }, {
        cidr: "15.230.216.6/31",
      }, {
        cidr: "15.230.216.8/32",
      }, {
        cidr: "15.230.216.9/32",
      }, {
        cidr: "15.230.218.0/24",
      }, {
        cidr: "15.230.220.0/24",
      }, {
        cidr: "15.230.221.0/24",
      }, {
        cidr: "15.230.242.0/24",
      }, {
        cidr: "15.230.245.0/24",
      }, {
        cidr: "15.230.248.0/24",
      }, {
        cidr: "15.230.254.0/31",
      }, {
        cidr: "15.230.254.2/31",
      }, {
        cidr: "15.230.254.4/32",
      }, {
        cidr: "15.230.35.0/24",
      }, {
        cidr: "15.230.38.0/24",
      }, {
        cidr: "15.230.40.0/24",
      }, {
        cidr: "15.230.48.0/24",
      }, {
        cidr: "15.230.56.0/24",
      }, {
        cidr: "15.230.57.0/24",
      }, {
        cidr: "15.230.65.128/25",
      }, {
        cidr: "15.230.66.0/25",
      }, {
        cidr: "15.230.66.128/25",
      }, {
        cidr: "15.230.83.0/24",
      }, {
        cidr: "15.230.87.0/24",
      }, {
        cidr: "15.230.95.0/24",
      }, {
        cidr: "15.248.138.0/24",
      }, {
        cidr: "15.248.139.1/32",
      }, {
        cidr: "15.248.139.2/32",
      }, {
        cidr: "15.248.140.0/24",
      }, {
        cidr: "15.248.143.0/24",
      }, {
        cidr: "15.251.0.10/32",
      }, {
        cidr: "15.251.0.11/32",
      }, {
        cidr: "150.222.100.0/24",
      }, {
        cidr: "150.222.103.0/24",
      }, {
        cidr: "150.222.110.0/24",
      }, {
        cidr: "150.222.137.0/24",
      }, {
        cidr: "150.222.138.0/24",
      }, {
        cidr: "150.222.143.0/24",
      }, {
        cidr: "150.222.15.124/32",
      }, {
        cidr: "150.222.15.125/32",
      }, {
        cidr: "150.222.15.126/32",
      }, {
        cidr: "150.222.15.127/32",
      }, {
        cidr: "150.222.2.0/24",
      }, {
        cidr: "150.222.205.0/24",
      }, {
        cidr: "150.222.206.0/24",
      }, {
        cidr: "150.222.211.0/24",
      }, {
        cidr: "150.222.212.0/24",
      }, {
        cidr: "150.222.216.0/24",
      }, {
        cidr: "150.222.218.0/24",
      }, {
        cidr: "150.222.222.0/24",
      }, {
        cidr: "150.222.223.0/24",
      }, {
        cidr: "150.222.224.0/24",
      }, {
        cidr: "150.222.226.0/24",
      }, {
        cidr: "150.222.227.0/24",
      }, {
        cidr: "150.222.236.0/24",
      }, {
        cidr: "150.222.237.0/24",
      }, {
        cidr: "150.222.24.32/32",
      }, {
        cidr: "150.222.24.33/32",
      }, {
        cidr: "150.222.24.34/32",
      }, {
        cidr: "150.222.24.35/32",
      }, {
        cidr: "150.222.24.36/32",
      }, {
        cidr: "150.222.24.37/32",
      }, {
        cidr: "150.222.24.38/32",
      }, {
        cidr: "150.222.24.39/32",
      }, {
        cidr: "150.222.24.64/32",
      }, {
        cidr: "150.222.24.65/32",
      }, {
        cidr: "150.222.24.66/32",
      }, {
        cidr: "150.222.24.67/32",
      }, {
        cidr: "150.222.24.68/32",
      }, {
        cidr: "150.222.24.69/32",
      }, {
        cidr: "150.222.24.70/32",
      }, {
        cidr: "150.222.24.71/32",
      }, {
        cidr: "150.222.25.32/32",
      }, {
        cidr: "150.222.25.33/32",
      }, {
        cidr: "150.222.25.34/32",
      }, {
        cidr: "150.222.25.35/32",
      }, {
        cidr: "150.222.25.36/32",
      }, {
        cidr: "150.222.25.37/32",
      }, {
        cidr: "150.222.25.38/32",
      }, {
        cidr: "150.222.25.39/32",
      }, {
        cidr: "150.222.32.0/24",
      }, {
        cidr: "150.222.33.0/24",
      }, {
        cidr: "150.222.34.0/24",
      }, {
        cidr: "150.222.66.0/24",
      }, {
        cidr: "150.222.68.116/31",
      }, {
        cidr: "150.222.71.0/24",
      }, {
        cidr: "150.222.73.0/24",
      }, {
        cidr: "150.222.76.0/24",
      }, {
        cidr: "150.222.79.0/24",
      }, {
        cidr: "150.222.87.0/24",
      }, {
        cidr: "150.222.99.0/24",
      }, {
        cidr: "150.247.33.0/24",
      }, {
        cidr: "150.247.43.0/24",
      }, {
        cidr: "151.148.20.0/24",
      }, {
        cidr: "151.148.36.0/24",
      }, {
        cidr: "155.146.0.0/20",
      }, {
        cidr: "155.146.176.0/20",
      }, {
        cidr: "155.146.192.0/20",
      }, {
        cidr: "155.146.208.0/20",
      }, {
        cidr: "155.146.224.0/20",
      }, {
        cidr: "155.146.240.0/20",
      }, {
        cidr: "155.146.32.0/20",
      }, {
        cidr: "155.146.48.0/20",
      }, {
        cidr: "155.146.64.0/20",
      }, {
        cidr: "155.146.80.0/20",
      }, {
        cidr: "155.146.96.0/20",
      }, {
        cidr: "16.15.176.0/20",
      }, {
        cidr: "16.15.192.0/18",
      }, {
        cidr: "16.182.0.0/16",
      }, {
        cidr: "16.56.0.0/18",
      }, {
        cidr: "16.56.128.0/18",
      }, {
        cidr: "16.56.192.0/18",
      }, {
        cidr: "16.56.64.0/18",
      }, {
        cidr: "161.178.0.0/18",
      }, {
        cidr: "161.178.128.0/18",
      }, {
        cidr: "161.188.0.0/20",
      }, {
        cidr: "161.188.112.0/22",
      }, {
        cidr: "161.188.116.0/22",
      }, {
        cidr: "161.188.120.0/22",
      }, {
        cidr: "161.188.127.0/24",
      }, {
        cidr: "161.188.16.0/20",
      }, {
        cidr: "161.188.48.0/20",
      }, {
        cidr: "161.188.64.0/20",
      }, {
        cidr: "161.188.80.0/20",
      }, {
        cidr: "161.193.0.0/18",
      }, {
        cidr: "162.250.236.0/24",
      }, {
        cidr: "162.250.237.0/24",
      }, {
        cidr: "162.250.238.0/23",
      }, {
        cidr: "168.185.5.0/24",
      }, {
        cidr: "172.96.97.0/24",
      }, {
        cidr: "173.83.200.0/22",
      }, {
        cidr: "174.129.0.0/16",
      }, {
        cidr: "176.32.120.0/22",
      }, {
        cidr: "176.32.124.128/25",
      }, {
        cidr: "176.32.125.128/25",
      }, {
        cidr: "176.32.96.0/21",
      }, {
        cidr: "18.204.0.0/14",
      }, {
        cidr: "18.208.0.0/13",
      }, {
        cidr: "18.232.0.0/14",
      }, {
        cidr: "18.34.0.0/19",
      }, {
        cidr: "18.34.232.0/21",
      }, {
        cidr: "18.88.0.0/18",
      }, {
        cidr: "18.88.64.0/18",
      }, {
        cidr: "18.89.128.0/18",
      }, {
        cidr: "18.96.0.0/24",
      }, {
        cidr: "18.96.1.0/24",
      }, {
        cidr: "18.96.2.0/24",
      }, {
        cidr: "18.96.3.0/24",
      }, {
        cidr: "18.97.0.0/18",
      }, {
        cidr: "184.72.128.0/17",
      }, {
        cidr: "184.72.64.0/18",
      }, {
        cidr: "184.73.0.0/16",
      }, {
        cidr: "192.157.36.0/24",
      }, {
        cidr: "192.43.175.0/24",
      }, {
        cidr: "198.41.100.0/24",
      }, {
        cidr: "198.41.101.0/24",
      }, {
        cidr: "198.41.102.0/24",
      }, {
        cidr: "198.41.96.0/24",
      }, {
        cidr: "198.41.97.0/24",
      }, {
        cidr: "198.41.98.0/24",
      }, {
        cidr: "198.41.99.0/24",
      }, {
        cidr: "199.127.232.0/22",
      }, {
        cidr: "204.236.192.0/18",
      }, {
        cidr: "204.87.185.0/24",
      }, {
        cidr: "205.251.225.0/24",
      }, {
        cidr: "205.251.240.0/22",
      }, {
        cidr: "205.251.244.0/23",
      }, {
        cidr: "205.251.246.0/24",
      }, {
        cidr: "205.251.247.0/24",
      }, {
        cidr: "205.251.248.0/24",
      }, {
        cidr: "206.72.209.0/24",
      }, {
        cidr: "207.171.160.0/20",
      }, {
        cidr: "207.171.176.0/20",
      }, {
        cidr: "208.110.48.0/20",
      }, {
        cidr: "208.86.88.0/23",
      }, {
        cidr: "209.54.176.0/21",
      }, {
        cidr: "216.182.224.0/21",
      }, {
        cidr: "216.182.232.0/22",
      }, {
        cidr: "216.182.238.0/23",
      }, {
        cidr: "216.198.193.0/24",
      }, {
        cidr: "216.198.224.0/22",
      }, {
        cidr: "216.244.40.0/21",
      }, {
        cidr: "216.244.7.0/24",
      }, {
        cidr: "23.20.0.0/14",
      }, {
        cidr: "23.228.192.0/24",
      }, {
        cidr: "23.228.193.0/24",
      }, {
        cidr: "23.228.194.0/24",
      }, {
        cidr: "23.228.228.0/22",
      }, {
        cidr: "23.228.232.0/22",
      }, {
        cidr: "24.110.16.0/20",
      }, {
        cidr: "3.2.0.0/24",
      }, {
        cidr: "3.2.2.0/24",
      }, {
        cidr: "3.2.3.0/24",
      }, {
        cidr: "3.2.50.0/24",
      }, {
        cidr: "3.2.51.0/24",
      }, {
        cidr: "3.2.52.0/24",
      }, {
        cidr: "3.2.58.0/24",
      }, {
        cidr: "3.2.64.0/24",
      }, {
        cidr: "3.2.65.0/24",
      }, {
        cidr: "3.2.74.0/24",
      }, {
        cidr: "3.208.0.0/12",
      }, {
        cidr: "3.224.0.0/12",
      }, {
        cidr: "3.227.250.128/25",
      }, {
        cidr: "3.234.248.192/26",
      }, {
        cidr: "3.235.202.128/26",
      }, {
        cidr: "3.236.169.0/25",
      }, {
        cidr: "3.236.32.0/22",
      }, {
        cidr: "3.236.94.128/25",
      }, {
        cidr: "3.237.107.0/25",
      }, {
        cidr: "3.238.167.0/24",
      }, {
        cidr: "3.239.232.0/24",
      }, {
        cidr: "3.3.16.0/21",
      }, {
        cidr: "3.3.2.0/24",
      }, {
        cidr: "3.3.32.0/23",
      }, {
        cidr: "3.3.5.0/24",
      }, {
        cidr: "3.33.34.0/24",
      }, {
        cidr: "3.33.44.0/22",
      }, {
        cidr: "3.4.0.0/24",
      }, {
        cidr: "3.4.1.0/24",
      }, {
        cidr: "3.4.10.0/24",
      }, {
        cidr: "3.4.12.39/32",
      }, {
        cidr: "3.4.12.40/32",
      }, {
        cidr: "3.4.12.5/32",
      }, {
        cidr: "3.4.12.6/32",
      }, {
        cidr: "3.4.13.64/28",
      }, {
        cidr: "3.4.13.80/28",
      }, {
        cidr: "3.4.15.112/29",
      }, {
        cidr: "3.4.2.0/24",
      }, {
        cidr: "3.4.9.0/24",
      }, {
        cidr: "3.41.128.0/17",
      }, {
        cidr: "3.5.0.0/19",
      }, {
        cidr: "3.80.0.0/12",
      }, {
        cidr: "3.83.168.0/22",
      }, {
        cidr: "3.91.171.128/25",
      }, {
        cidr: "31.220.220.0/22",
      }, {
        cidr: "31.220.236.0/24",
      }, {
        cidr: "32.192.0.0/12",
      }, {
        cidr: "34.192.0.0/12",
      }, {
        cidr: "34.224.0.0/12",
      }, {
        cidr: "35.111.255.0/24",
      }, {
        cidr: "35.153.0.0/16",
      }, {
        cidr: "35.168.0.0/13",
      }, {
        cidr: "35.50.137.0/24",
      }, {
        cidr: "35.50.139.0/24",
      }, {
        cidr: "35.50.141.0/24",
      }, {
        cidr: "35.54.32.0/21",
      }, {
        cidr: "35.55.29.0/24",
      }, {
        cidr: "35.55.30.0/24",
      }, {
        cidr: "35.55.32.0/24",
      }, {
        cidr: "35.71.68.0/22",
      }, {
        cidr: "35.96.144.0/20",
      }, {
        cidr: "35.96.253.0/24",
      }, {
        cidr: "35.96.28.0/23",
      }, {
        cidr: "35.96.32.0/24",
      }, {
        cidr: "44.192.0.0/11",
      }, {
        cidr: "44.199.180.0/23",
      }, {
        cidr: "44.199.222.128/26",
      }, {
        cidr: "44.202.79.128/25",
      }, {
        cidr: "44.210.201.0/24",
      }, {
        cidr: "44.210.202.0/24",
      }, {
        cidr: "44.210.246.64/26",
      }, {
        cidr: "44.212.79.192/26",
      }, {
        cidr: "44.213.61.128/25",
      }, {
        cidr: "44.213.78.0/23",
      }, {
        cidr: "44.213.98.0/24",
      }, {
        cidr: "44.215.114.0/23",
      }, {
        cidr: "44.215.116.0/22",
      }, {
        cidr: "44.215.128.0/22",
      }, {
        cidr: "44.215.132.0/22",
      }, {
        cidr: "44.215.136.0/22",
      }, {
        cidr: "44.215.140.0/22",
      }, {
        cidr: "44.215.76.0/24",
      }, {
        cidr: "44.216.184.0/22",
      }, {
        cidr: "44.216.188.0/22",
      }, {
        cidr: "44.216.192.0/22",
      }, {
        cidr: "44.216.196.0/22",
      }, {
        cidr: "44.216.200.0/22",
      }, {
        cidr: "44.220.25.0/25",
      }, {
        cidr: "44.220.67.128/25",
      }, {
        cidr: "44.220.68.0/25",
      }, {
        cidr: "44.220.72.0/22",
      }, {
        cidr: "44.220.76.0/22",
      }, {
        cidr: "44.223.121.0/24",
      }, {
        cidr: "44.223.122.0/24",
      }, {
        cidr: "46.51.208.0/22",
      }, {
        cidr: "5.179.96.0/20",
      }, {
        cidr: "5.60.64.0/19",
      }, {
        cidr: "50.16.0.0/15",
      }, {
        cidr: "50.19.0.0/16",
      }, {
        cidr: "52.0.0.0/15",
      }, {
        cidr: "52.119.196.0/22",
      }, {
        cidr: "52.119.206.0/23",
      }, {
        cidr: "52.119.212.0/23",
      }, {
        cidr: "52.119.214.0/23",
      }, {
        cidr: "52.119.224.0/21",
      }, {
        cidr: "52.119.232.0/21",
      }, {
        cidr: "52.144.192.0/26",
      }, {
        cidr: "52.144.192.128/26",
      }, {
        cidr: "52.144.192.192/26",
      }, {
        cidr: "52.144.192.64/26",
      }, {
        cidr: "52.144.193.0/26",
      }, {
        cidr: "52.144.193.128/26",
      }, {
        cidr: "52.144.193.64/26",
      }, {
        cidr: "52.144.194.0/26",
      }, {
        cidr: "52.144.195.0/26",
      }, {
        cidr: "52.144.200.128/26",
      }, {
        cidr: "52.144.200.64/26",
      }, {
        cidr: "52.2.0.0/15",
      }, {
        cidr: "52.20.0.0/14",
      }, {
        cidr: "52.200.0.0/13",
      }, {
        cidr: "52.216.0.0/15",
      }, {
        cidr: "52.4.0.0/14",
      }, {
        cidr: "52.44.0.0/15",
      }, {
        cidr: "52.46.128.0/19",
      }, {
        cidr: "52.46.164.0/23",
      }, {
        cidr: "52.46.168.0/23",
      }, {
        cidr: "52.46.170.0/23",
      }, {
        cidr: "52.46.250.0/23",
      }, {
        cidr: "52.46.252.0/22",
      }, {
        cidr: "52.54.0.0/15",
      }, {
        cidr: "52.70.0.0/15",
      }, {
        cidr: "52.72.0.0/15",
      }, {
        cidr: "52.86.0.0/15",
      }, {
        cidr: "52.90.0.0/15",
      }, {
        cidr: "52.93.1.0/24",
      }, {
        cidr: "52.93.119.144/30",
      }, {
        cidr: "52.93.123.136/32",
      }, {
        cidr: "52.93.123.255/32",
      }, {
        cidr: "52.93.123.98/32",
      }, {
        cidr: "52.93.123.99/32",
      }, {
        cidr: "52.93.126.122/32",
      }, {
        cidr: "52.93.126.123/32",
      }, {
        cidr: "52.93.126.212/32",
      }, {
        cidr: "52.93.126.213/32",
      }, {
        cidr: "52.93.126.214/32",
      }, {
        cidr: "52.93.126.215/32",
      }, {
        cidr: "52.93.127.122/32",
      }, {
        cidr: "52.93.127.123/32",
      }, {
        cidr: "52.93.127.124/32",
      }, {
        cidr: "52.93.127.125/32",
      }, {
        cidr: "52.93.127.162/32",
      }, {
        cidr: "52.93.127.163/32",
      }, {
        cidr: "52.93.127.164/32",
      }, {
        cidr: "52.93.127.165/32",
      }, {
        cidr: "52.93.127.166/32",
      }, {
        cidr: "52.93.127.167/32",
      }, {
        cidr: "52.93.127.168/32",
      }, {
        cidr: "52.93.127.169/32",
      }, {
        cidr: "52.93.127.172/32",
      }, {
        cidr: "52.93.127.173/32",
      }, {
        cidr: "52.93.127.18/32",
      }, {
        cidr: "52.93.127.180/32",
      }, {
        cidr: "52.93.127.181/32",
      }, {
        cidr: "52.93.127.182/32",
      }, {
        cidr: "52.93.127.183/32",
      }, {
        cidr: "52.93.127.184/32",
      }, {
        cidr: "52.93.127.185/32",
      }, {
        cidr: "52.93.127.19/32",
      }, {
        cidr: "52.93.127.200/32",
      }, {
        cidr: "52.93.127.201/32",
      }, {
        cidr: "52.93.127.216/32",
      }, {
        cidr: "52.93.127.217/32",
      }, {
        cidr: "52.93.127.218/32",
      }, {
        cidr: "52.93.127.219/32",
      }, {
        cidr: "52.93.127.220/32",
      }, {
        cidr: "52.93.127.221/32",
      }, {
        cidr: "52.93.127.68/32",
      }, {
        cidr: "52.93.127.69/32",
      }, {
        cidr: "52.93.147.0/24",
      }, {
        cidr: "52.93.236.0/24",
      }, {
        cidr: "52.93.238.0/25",
      }, {
        cidr: "52.93.238.128/25",
      }, {
        cidr: "52.93.24.0/21",
      }, {
        cidr: "52.93.243.0/24",
      }, {
        cidr: "52.93.249.0/24",
      }, {
        cidr: "52.93.254.0/24",
      }, {
        cidr: "52.93.3.0/24",
      }, {
        cidr: "52.93.34.128/25",
      }, {
        cidr: "52.93.37.0/24",
      }, {
        cidr: "52.93.4.0/24",
      }, {
        cidr: "52.93.40.0/24",
      }, {
        cidr: "52.93.50.0/24",
      }, {
        cidr: "52.93.51.0/24",
      }, {
        cidr: "52.93.59.0/24",
      }, {
        cidr: "52.93.60.0/24",
      }, {
        cidr: "52.93.61.0/24",
      }, {
        cidr: "52.93.64.0/24",
      }, {
        cidr: "52.93.65.0/24",
      }, {
        cidr: "52.93.70.40/29",
      }, {
        cidr: "52.93.74.0/24",
      }, {
        cidr: "52.93.76.0/24",
      }, {
        cidr: "52.93.84.160/32",
      }, {
        cidr: "52.93.84.161/32",
      }, {
        cidr: "52.93.84.162/32",
      }, {
        cidr: "52.93.84.163/32",
      }, {
        cidr: "52.93.84.164/32",
      }, {
        cidr: "52.93.84.165/32",
      }, {
        cidr: "52.93.84.166/32",
      }, {
        cidr: "52.93.84.167/32",
      }, {
        cidr: "52.93.84.192/32",
      }, {
        cidr: "52.93.84.193/32",
      }, {
        cidr: "52.93.84.194/32",
      }, {
        cidr: "52.93.84.195/32",
      }, {
        cidr: "52.93.84.196/32",
      }, {
        cidr: "52.93.84.197/32",
      }, {
        cidr: "52.93.84.198/32",
      }, {
        cidr: "52.93.84.199/32",
      }, {
        cidr: "52.93.86.160/32",
      }, {
        cidr: "52.93.86.161/32",
      }, {
        cidr: "52.93.86.162/32",
      }, {
        cidr: "52.93.86.163/32",
      }, {
        cidr: "52.93.86.164/32",
      }, {
        cidr: "52.93.86.165/32",
      }, {
        cidr: "52.93.86.166/32",
      }, {
        cidr: "52.93.86.167/32",
      }, {
        cidr: "52.93.86.192/32",
      }, {
        cidr: "52.93.86.193/32",
      }, {
        cidr: "52.93.86.194/32",
      }, {
        cidr: "52.93.86.195/32",
      }, {
        cidr: "52.93.86.196/32",
      }, {
        cidr: "52.93.86.197/32",
      }, {
        cidr: "52.93.86.198/32",
      }, {
        cidr: "52.93.86.199/32",
      }, {
        cidr: "52.93.87.96/27",
      }, {
        cidr: "52.93.88.160/32",
      }, {
        cidr: "52.93.88.161/32",
      }, {
        cidr: "52.93.88.162/32",
      }, {
        cidr: "52.93.88.163/32",
      }, {
        cidr: "52.93.88.164/32",
      }, {
        cidr: "52.93.88.165/32",
      }, {
        cidr: "52.93.88.166/32",
      }, {
        cidr: "52.93.88.167/32",
      }, {
        cidr: "52.93.88.192/32",
      }, {
        cidr: "52.93.88.193/32",
      }, {
        cidr: "52.93.88.194/32",
      }, {
        cidr: "52.93.88.195/32",
      }, {
        cidr: "52.93.88.196/32",
      }, {
        cidr: "52.93.88.197/32",
      }, {
        cidr: "52.93.88.198/32",
      }, {
        cidr: "52.93.88.199/32",
      }, {
        cidr: "52.93.90.160/32",
      }, {
        cidr: "52.93.90.161/32",
      }, {
        cidr: "52.93.90.162/32",
      }, {
        cidr: "52.93.90.163/32",
      }, {
        cidr: "52.93.90.164/32",
      }, {
        cidr: "52.93.90.165/32",
      }, {
        cidr: "52.93.90.166/32",
      }, {
        cidr: "52.93.90.167/32",
      }, {
        cidr: "52.93.90.192/32",
      }, {
        cidr: "52.93.90.193/32",
      }, {
        cidr: "52.93.90.194/32",
      }, {
        cidr: "52.93.90.195/32",
      }, {
        cidr: "52.93.90.196/32",
      }, {
        cidr: "52.93.90.197/32",
      }, {
        cidr: "52.93.90.198/32",
      }, {
        cidr: "52.93.90.199/32",
      }, {
        cidr: "52.93.91.100/32",
      }, {
        cidr: "52.93.91.101/32",
      }, {
        cidr: "52.93.91.102/32",
      }, {
        cidr: "52.93.91.103/32",
      }, {
        cidr: "52.93.91.104/32",
      }, {
        cidr: "52.93.91.105/32",
      }, {
        cidr: "52.93.91.106/32",
      }, {
        cidr: "52.93.91.107/32",
      }, {
        cidr: "52.93.91.108/32",
      }, {
        cidr: "52.93.91.109/32",
      }, {
        cidr: "52.93.91.110/32",
      }, {
        cidr: "52.93.91.111/32",
      }, {
        cidr: "52.93.91.112/32",
      }, {
        cidr: "52.93.91.113/32",
      }, {
        cidr: "52.93.91.114/32",
      }, {
        cidr: "52.93.91.115/32",
      }, {
        cidr: "52.93.91.96/32",
      }, {
        cidr: "52.93.91.97/32",
      }, {
        cidr: "52.93.91.98/32",
      }, {
        cidr: "52.93.91.99/32",
      }, {
        cidr: "52.93.97.0/24",
      }, {
        cidr: "52.94.0.0/22",
      }, {
        cidr: "52.94.124.0/22",
      }, {
        cidr: "52.94.132.0/22",
      }, {
        cidr: "52.94.152.11/32",
      }, {
        cidr: "52.94.152.12/32",
      }, {
        cidr: "52.94.152.44/32",
      }, {
        cidr: "52.94.152.9/32",
      }, {
        cidr: "52.94.192.0/22",
      }, {
        cidr: "52.94.201.0/26",
      }, {
        cidr: "52.94.201.64/26",
      }, {
        cidr: "52.94.224.0/20",
      }, {
        cidr: "52.94.240.0/22",
      }, {
        cidr: "52.94.244.0/22",
      }, {
        cidr: "52.94.248.0/28",
      }, {
        cidr: "52.94.252.0/23",
      }, {
        cidr: "52.94.254.0/23",
      }, {
        cidr: "52.94.68.0/24",
      }, {
        cidr: "52.95.108.0/23",
      }, {
        cidr: "52.95.208.0/22",
      }, {
        cidr: "52.95.245.0/24",
      }, {
        cidr: "52.95.255.80/28",
      }, {
        cidr: "52.95.41.0/24",
      }, {
        cidr: "52.95.48.0/22",
      }, {
        cidr: "52.95.52.0/22",
      }, {
        cidr: "52.95.62.0/24",
      }, {
        cidr: "52.95.63.0/24",
      }, {
        cidr: "54.112.0.0/18",
      }, {
        cidr: "54.144.0.0/14",
      }, {
        cidr: "54.152.0.0/16",
      }, {
        cidr: "54.156.0.0/14",
      }, {
        cidr: "54.160.0.0/13",
      }, {
        cidr: "54.172.0.0/15",
      }, {
        cidr: "54.174.0.0/15",
      }, {
        cidr: "54.196.0.0/15",
      }, {
        cidr: "54.198.0.0/16",
      }, {
        cidr: "54.204.0.0/15",
      }, {
        cidr: "54.208.0.0/15",
      }, {
        cidr: "54.210.0.0/15",
      }, {
        cidr: "54.221.0.0/16",
      }, {
        cidr: "54.224.0.0/15",
      }, {
        cidr: "54.226.0.0/15",
      }, {
        cidr: "54.231.0.0/16",
      }, {
        cidr: "54.234.0.0/15",
      }, {
        cidr: "54.236.0.0/15",
      }, {
        cidr: "54.239.0.0/28",
      }, {
        cidr: "54.239.103.128/26",
      }, {
        cidr: "54.239.104.0/23",
      }, {
        cidr: "54.239.108.0/22",
      }, {
        cidr: "54.239.112.0/24",
      }, {
        cidr: "54.239.16.0/20",
      }, {
        cidr: "54.239.8.0/21",
      }, {
        cidr: "54.239.98.0/24",
      }, {
        cidr: "54.240.196.0/24",
      }, {
        cidr: "54.240.202.0/24",
      }, {
        cidr: "54.240.208.0/22",
      }, {
        cidr: "54.240.216.0/22",
      }, {
        cidr: "54.240.228.0/23",
      }, {
        cidr: "54.240.232.0/22",
      }, {
        cidr: "54.242.0.0/15",
      }, {
        cidr: "54.25.14.0/24",
      }, {
        cidr: "54.25.15.0/24",
      }, {
        cidr: "54.25.20.0/24",
      }, {
        cidr: "54.25.82.0/24",
      }, {
        cidr: "54.26.166.0/24",
      }, {
        cidr: "54.80.0.0/13",
      }, {
        cidr: "54.88.0.0/14",
      }, {
        cidr: "54.92.128.0/17",
      }, {
        cidr: "63.246.119.0/24",
      }, {
        cidr: "64.187.128.0/20",
      }, {
        cidr: "64.252.125.0/24",
      }, {
        cidr: "64.252.64.0/24",
      }, {
        cidr: "64.252.66.0/24",
      }, {
        cidr: "64.252.67.0/24",
      }, {
        cidr: "64.252.68.0/24",
      }, {
        cidr: "64.252.69.0/24",
      }, {
        cidr: "67.202.0.0/18",
      }, {
        cidr: "67.220.240.0/20",
      }, {
        cidr: "68.66.112.0/20",
      }, {
        cidr: "69.107.10.144/29",
      }, {
        cidr: "69.107.10.152/29",
      }, {
        cidr: "69.107.10.176/29",
      }, {
        cidr: "69.107.10.184/29",
      }, {
        cidr: "69.107.10.192/29",
      }, {
        cidr: "69.107.10.200/29",
      }, {
        cidr: "69.107.10.48/29",
      }, {
        cidr: "69.107.10.56/29",
      }, {
        cidr: "69.107.10.80/29",
      }, {
        cidr: "69.107.10.88/29",
      }, {
        cidr: "69.107.3.176/29",
      }, {
        cidr: "69.107.3.184/29",
      }, {
        cidr: "69.107.7.104/29",
      }, {
        cidr: "69.107.7.32/29",
      }, {
        cidr: "69.107.7.40/29",
      }, {
        cidr: "69.107.7.64/29",
      }, {
        cidr: "69.107.7.72/29",
      }, {
        cidr: "69.107.7.96/29",
      }, {
        cidr: "70.232.92.0/22",
      }, {
        cidr: "72.21.192.0/19",
      }, {
        cidr: "72.41.0.0/20",
      }, {
        cidr: "72.44.32.0/19",
      }, {
        cidr: "75.101.128.0/17",
      }, {
        cidr: "75.2.128.0/18",
      }, {
        cidr: "75.22.192.0/18",
      }, {
        cidr: "75.47.0.0/18",
      }, {
        cidr: "76.223.172.0/22",
      }, {
        cidr: "96.0.100.0/23",
      }, {
        cidr: "96.0.102.0/23",
      }, {
        cidr: "96.0.104.0/22",
      }, {
        cidr: "96.0.12.0/22",
      }, {
        cidr: "96.0.131.0/24",
      }, {
        cidr: "96.0.152.0/21",
      }, {
        cidr: "96.0.16.0/21",
      }, {
        cidr: "96.0.48.0/21",
      }, {
        cidr: "96.0.56.0/22",
      }, {
        cidr: "96.0.84.0/22",
      }, {
        cidr: "96.0.88.0/22",
      }, {
        cidr: "96.0.92.0/23",
      }, {
        cidr: "96.0.96.0/22",
      }, {
        cidr: "98.80.0.0/13",
      }, {
        cidr: "98.80.195.0/25",
      }, {
        cidr: "98.80.238.0/23",
      }, {
        cidr: "98.82.109.128/25",
      }, {
        cidr: "98.82.109.16/28",
      }, {
        cidr: "98.82.142.0/24",
      }, {
        cidr: "98.82.154.0/23",
      }, {
        cidr: "98.82.156.0/23",
      }, {
        cidr: "98.82.158.0/23",
      }, {
        cidr: "98.82.160.0/23",
      }, {
        cidr: "98.87.170.0/23",
      }, {
        cidr: "98.87.172.0/23",
      }, {
        cidr: "98.87.174.0/23",
      }, {
        cidr: "98.88.0.0/13",
      }, {
        cidr: "98.88.14.0/23",
      }, {
        cidr: "98.90.62.0/23",
      }, {
        cidr: "99.150.8.0/21",
      }, {
        cidr: "99.151.184.0/23",
      }, {
        cidr: "99.151.190.0/23",
      }, {
        cidr: "99.77.128.0/24",
      }, {
        cidr: "99.77.129.0/24",
      }, {
        cidr: "99.77.151.0/24",
      }, {
        cidr: "99.77.187.0/24",
      }, {
        cidr: "99.77.191.0/24",
      }, {
        cidr: "99.77.254.0/24",
      }, {
        cidr: "99.78.192.0/22",
      }, {
        cidr: "99.82.165.0/24",
      }, {
        cidr: "99.82.166.0/24",
      }, {
        cidr: "99.82.167.0/24",
      }, {
        cidr: "99.82.171.0/24",
      }, {
        cidr: "99.82.175.0/24",
      }, {
        cidr: "99.82.188.0/22",
      }, {
        cidr: "99.83.101.0/24",
      }, {
        cidr: "99.83.106.0/24",
      }],
      toPorts: [{
        ports: [{
          port: "443",
        }],
      }],
    }],
  },
}
